// Vitest Snapshot v1

exports[`component: ButtonBase > shows dange button 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <button
    class="inline-flex w-fit flex-row items-center justify-center rounded-md border-2 py-1 px-2 disabled:cursor-not-allowed disabled:opacity-60"
  >
    <!--v-if-->
    <span>
      
      
    </span>
  </button>,
}
`;

exports[`component: ButtonBase > shows primary button 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <button
    class="inline-flex w-fit flex-row items-center justify-center rounded-md border-2 py-1 px-2 disabled:cursor-not-allowed disabled:opacity-60 border-0 bg-cyan-600 text-white disabled:bg-cyan-600 disabled:hover:bg-cyan-600 dark:bg-cyan-600 dark:hover:bg-cyan-600 dark:disabled:hover:bg-cyan-600"
  >
    <!--v-if-->
    <span>
      
      
    </span>
  </button>,
}
`;

exports[`component: ButtonBase > shows secondary button 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <button
    class="inline-flex w-fit flex-row items-center justify-center rounded-md border-2 py-1 px-2 disabled:cursor-not-allowed disabled:opacity-60 border-stone-200 text-stone-500 hover:bg-stone-100 disabled:hover:bg-white dark:border-stone-700 dark:text-white/70 dark:hover:bg-stone-700 disabled:hover:dark:bg-stone-900"
  >
    <!--v-if-->
    <span>
      
      
    </span>
  </button>,
}
`;

exports[`component: ButtonBase > shows secondary button as default 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <button
    class="inline-flex w-fit flex-row items-center justify-center rounded-md border-2 py-1 px-2 disabled:cursor-not-allowed disabled:opacity-60"
  >
    <!--v-if-->
    <span>
      
      
    </span>
  </button>,
}
`;
